# the-stuffy-council

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Dockerfile  README.md  authorized-users.toml  rust-toolchain.toml
.github/: agent-review-log.md  copilot-instructions.md
.github/instructions/: agent-authoring.instructions.md  test-quality.instructions.md  test-style.instructions.md
.github/workflows/: rust-ci.yml
cast/: README.md  bar-bar.toml  dad.toml  lennon.toml  ruff-ruff.toml  woofy.toml
docs/: character-art.md  dev-setup.md
docs/testing/: README.md
examples/: doc_lint.rs
migrations/: 0001_init.sql  0002_google_auth.sql
src/: access.rs  auth.rs  cast.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  story_repo.rs
src/routes/: auth.rs  characters.rs  home.rs  mod.rs
src/stories/: mod.rs  ollama.rs
src/web/: csrf.rs  mod.rs  portrait.rs  security.rs
static/: app.css
templates/: base.html  character.html  council.html  home.html  login.html  story.html
tests/: router_smoke.rs
tests/common/: mod.rs
tests/support/: google_jwt.rs
