[package]
name = "stuffy-council"
version = "0.1.0"
edition = "2024"
publish = false
description = "Daily generative stuffy stories, powered by a local LLM."

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
  "trace",
  "fs",
  "set-header",
  "compression-gzip",
  "timeout",
  "limit",
] }

# Sessions + rate limiting
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tower_governor = "0.8"

# Templating (compile-time, injection-safe HTML)
askama = "0.14"

# Storage
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "macros",
  "migrate",
  "time",
] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# HTTP client (for Ollama)
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "gzip",
] }
async-trait = "0.1"

# Auth — Google Identity Services (client-side sign-in, server verifies the ID token JWT).
# No OAuth authorization-code flow, no client_secret. Only a public client_id.
jsonwebtoken = "9"

# Utilities used by CSRF token generation (web::csrf) and the story cast
# random pick (stories::pick_cast_for). NOT used for Google auth.
rand = "0.8"
subtle = "2"
base64 = "0.22"

# Errors + logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }

# Dev-time env loading (not used in production containers — env vars come from the platform)
dotenvy = "0.15"

[dev-dependencies]
rsa = "0.9"
# Scratch directories/files for the-database + allowlist wire-ups in integration tests.
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
